# 2022-2023-project-3-harfang3d-binding-Project-8-group

./: .gitignore  Bugs report 11-02-2023.txt  Cargo.toml  Dockerfile  bind.py  caca.py  calacalac.py  docker.sh  docker_comand.txt  docker_script.bat  gen.py  linux1_perf.txt  mac1_perf.text  readme.md  requirements.txt  tests.py  tests_for_perfReport.py  windows1_perf.txt  windows2_perf.txt  windows_perf.txt
duh/: CMakeLists.txt  Cargo.toml  FastNoise.h  _clang-format  build.rs  wrapper.cpp  wrapper.h
duh/engine/: android_native_api.h  animation.h  animation_serialization.h  audio_codec.h  audio_data.h  audio_format.h  audio_io.h  bind_Lua.h  box_collision.h  camera.h  camera_system.h  capsule_collision.h  collision.h  collision_pair.h  component.h  component_factory.h  convex_collision.h  core_reflection.h  core_resources.h  core_serialization.h  create_geometry.h  d6_joint.h  debugger.h  decorator.h  display_list.h  engine.h  environment.h  eye.h  factories.h  font_engine.h  geometry.h  geometry_bih.h  geometry_debug.h  geometry_merge.h  geometry_serialization.h  geometry_template.h  geometry_tree.h  get_node_children_accelerator.h  gpu_buffer.h  gpu_caps.h  (+116 more)
duh/foundation/: alias_file_driver.h  allocator.h  allocator_profiler.h  ascii_encoder.h  assert.h  axis_lock.h  base_file_handle.h  base_type_reflection.h  base_type_std_vector_reflection.h  bih.h  billing.h  binary_data.h  binary_document.h  buffer_file_driver.h  build_info.h  byte_sort.h  cache_file_driver.h  call.h  call_queue.h  call_queue_mt.h  call_task.h  cext.h  clock.h  color.h  color_api.h  country.h  (+98 more)
(+92 files in other folders)
